load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_layer",
)
load("@bazeldnf//:deps.bzl", "rpmtree")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit_layer")

go_library(
    name = "ovirt-populator_lib",
    srcs = ["ovirt-populator.go"],
    importpath = "github.com/konveyor/forklift-controller/cmd/ovirt-populator",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/prometheus/client_golang/prometheus",
        "//vendor/github.com/prometheus/client_model/go",
        "//vendor/k8s.io/klog/v2:klog",
        "@com_github_kubev2v_forklift//pkg/metrics:go_default_library",
    ],
)

go_binary(
    name = "ovirt-populator",
    embed = [":ovirt-populator_lib"],
    visibility = ["//visibility:public"],
)

container_layer(
    name = "base-layer",
    tars = [
        ":deps",
    ],
)

container_image(
    name = "base-image",
    base = "@ubi9-minimal//image",
    layers = [
        ":base-layer",
    ],
    visibility = ["//visibility:public"],
)

container_run_and_commit_layer(
    name = "ovirt-imageio-layer-run",
    commands = [
        "update-ca-trust",
        "pip install setuptools wheel",
        "pip install ovirt-engine-sdk-python ovirt-imageio",
    ],
    image = ":base-image.tar",
)

container_image(
    name = "ovirt-imageio-layer",
    base = ":base-image",
    layers = [
        ":ovirt-imageio-layer-run",
    ],
    visibility = ["//visibility:public"],
)

container_image(
    name = "ovirt-populator-image",
    base = ":ovirt-imageio-layer",
    directory = "/usr/local/bin/",
    entrypoint = ["/usr/local/bin/ovirt-populator"],
    files = [":ovirt-populator"],
    visibility = ["//visibility:public"],
)

rpmtree(
    name = "deps",
    rpms = [
        "@alternatives-0__1.24-2.el9.x86_64//rpm",
        "@basesystem-0__11-13.el9.x86_64//rpm",
        "@bash-0__5.1.8-9.el9.x86_64//rpm",
        "@binutils-0__2.35.2-58.el9.x86_64//rpm",
        "@binutils-gold-0__2.35.2-58.el9.x86_64//rpm",
        "@bzip2-libs-0__1.0.8-8.el9.x86_64//rpm",
        "@ca-certificates-0__2024.2.69_v8.0.303-91.4.el9.x86_64//rpm",
        "@centos-gpg-keys-0__9.0-30.el9.x86_64//rpm",
        "@centos-stream-release-0__9.0-30.el9.x86_64//rpm",
        "@centos-stream-repos-0__9.0-30.el9.x86_64//rpm",
        "@cmake-filesystem-0__3.26.5-2.el9.x86_64//rpm",
        "@coreutils-single-0__8.32-39.el9.x86_64//rpm",
        "@cpp-0__11.5.0-2.el9.x86_64//rpm",
        "@crypto-policies-0__20240828-2.git626aa59.el9.x86_64//rpm",
        "@elfutils-debuginfod-client-0__0.192-2.el9.x86_64//rpm",
        "@elfutils-default-yama-scope-0__0.192-2.el9.x86_64//rpm",
        "@elfutils-libelf-0__0.192-2.el9.x86_64//rpm",
        "@elfutils-libs-0__0.192-2.el9.x86_64//rpm",
        "@expat-0__2.5.0-4.el9.x86_64//rpm",
        "@filesystem-0__3.16-5.el9.x86_64//rpm",
        "@gawk-0__5.1.0-6.el9.x86_64//rpm",
        "@gcc-0__11.5.0-2.el9.x86_64//rpm",
        "@gdbm-libs-1__1.23-1.el9.x86_64//rpm",
        "@glib2-0__2.68.4-16.el9.x86_64//rpm",
        "@glibc-0__2.34-144.el9.x86_64//rpm",
        "@glibc-common-0__2.34-214.el9.x86_64//rpm",
        "@glibc-devel-0__2.34-144.el9.x86_64//rpm",
        "@glibc-headers-0__2.34-214.el9.x86_64//rpm",
        "@glibc-langpack-byn-0__2.34-214.el9.x86_64//rpm",
        "@gmp-1__6.2.0-13.el9.x86_64//rpm",
        "@gnutls-0__3.8.3-4.el9.x86_64//rpm",
        "@grep-0__3.6-5.el9.x86_64//rpm",
        "@json-c-0__0.14-11.el9.x86_64//rpm",
        "@kernel-headers-0__5.14.0-539.el9.x86_64//rpm",
        "@keyutils-libs-0__1.6.3-1.el9.x86_64//rpm",
        "@krb5-libs-0__1.21.1-4.el9.x86_64//rpm",
        "@libacl-0__2.3.1-4.el9.x86_64//rpm",
        "@libaio-0__0.3.111-13.el9.x86_64//rpm",
        "@libattr-0__2.5.1-3.el9.x86_64//rpm",
        "@libblkid-0__2.37.4-20.el9.x86_64//rpm",
        "@libcap-0__2.48-9.el9.x86_64//rpm",
        "@libcom_err-0__1.46.5-5.el9.x86_64//rpm",
        "@libcurl-devel-0__7.76.1-31.el9.x86_64//rpm",
        "@libcurl-minimal-0__7.76.1-31.el9.x86_64//rpm",
        "@libffi-0__3.4.2-8.el9.x86_64//rpm",
        "@libgcc-0__11.5.0-2.el9.x86_64//rpm",
        "@libgomp-0__11.5.0-2.el9.x86_64//rpm",
        "@libidn2-0__2.3.0-7.el9.x86_64//rpm",
        "@libmount-0__2.37.4-20.el9.x86_64//rpm",
        "@libmpc-0__1.2.1-4.el9.x86_64//rpm",
        "@libnghttp2-0__1.43.0-6.el9.x86_64//rpm",
        "@libpkgconf-0__1.7.3-10.el9.x86_64//rpm",
        "@libselinux-0__3.6-1.el9.x86_64//rpm",
        "@libsepol-0__3.6-1.el9.x86_64//rpm",
        "@libsigsegv-0__2.13-4.el9.x86_64//rpm",
        "@libstdc__plus____plus__-0__11.5.0-2.el9.x86_64//rpm",
        "@libtasn1-0__4.16.0-8.el9.x86_64//rpm",
        "@libunistring-0__0.9.10-15.el9.x86_64//rpm",
        "@liburing-0__2.5-1.el9.x86_64//rpm",
        "@libuuid-0__2.37.4-20.el9.x86_64//rpm",
        "@libverto-0__0.3.2-3.el9.x86_64//rpm",
        "@libxcrypt-0__4.4.18-3.el9.x86_64//rpm",
        "@libxcrypt-devel-0__4.4.18-3.el9.x86_64//rpm",
        "@libxml2-0__2.9.13-6.el9.x86_64//rpm",
        "@libxml2-devel-0__2.9.13-10.el9.x86_64//rpm",
        "@libzstd-0__1.5.5-1.el9.x86_64//rpm",
        "@make-1__4.3-8.el9.x86_64//rpm",
        "@mpfr-0__4.1.0-7.el9.x86_64//rpm",
        "@ncurses-base-0__6.2-10.20210508.el9.x86_64//rpm",
        "@ncurses-libs-0__6.2-10.20210508.el9.x86_64//rpm",
        "@nettle-0__3.9.1-1.el9.x86_64//rpm",
        "@numactl-libs-0__2.0.19-1.el9.x86_64//rpm",
        "@openssl-devel-1__3.5.0-4.el9.x86_64//rpm",
        "@openssl-libs-1__3.5.0-4.el9.x86_64//rpm",
        "@p11-kit-0__0.25.3-3.el9.x86_64//rpm",
        "@p11-kit-trust-0__0.25.3-3.el9.x86_64//rpm",
        "@pcre-0__8.44-4.el9.x86_64//rpm",
        "@pcre2-0__10.40-6.el9.x86_64//rpm",
        "@pcre2-syntax-0__10.40-6.el9.x86_64//rpm",
        "@pkgconf-0__1.7.3-10.el9.x86_64//rpm",
        "@pkgconf-m4-0__1.7.3-10.el9.x86_64//rpm",
        "@pkgconf-pkg-config-0__1.7.3-10.el9.x86_64//rpm",
        "@python3-0__3.9.21-1.el9.x86_64//rpm",
        "@python3-devel-0__3.9.21-1.el9.x86_64//rpm",
        "@python3-libs-0__3.9.21-1.el9.x86_64//rpm",
        "@python3-pip-0__21.3.1-1.el9.x86_64//rpm",
        "@python3-pip-wheel-0__21.3.1-1.el9.x86_64//rpm",
        "@python3-setuptools-wheel-0__53.0.0-13.el9.x86_64//rpm",
        "@qemu-img-17__9.1.0-6.el9.x86_64//rpm",
        "@readline-0__8.1-4.el9.x86_64//rpm",
        "@sed-0__4.8-9.el9.x86_64//rpm",
        "@setup-0__2.13.7-10.el9.x86_64//rpm",
        "@sqlite-libs-0__3.34.1-7.el9.x86_64//rpm",
        "@tzdata-0__2024b-3.el9.x86_64//rpm",
        "@xz-devel-0__5.2.5-8.el9.x86_64//rpm",
        "@xz-libs-0__5.2.5-8.el9.x86_64//rpm",
        "@zlib-0__1.2.11-40.el9.x86_64//rpm",
        "@zlib-devel-0__1.2.11-40.el9.x86_64//rpm",
    ],
    symlinks = {
        "/usr/bin/python": "/usr/bin/python3.9",
        "/usr/bin/ld": "/usr/bin/ld.bfd",
    },
    visibility = ["//visibility:public"],
)
