load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)
load(
    "@io_bazel_rules_docker//docker/util:run.bzl",
    "container_run_and_commit_layer",
    "container_run_and_extract",
)
load("@bazeldnf//:deps.bzl", "rpmtree")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

container_push(
    name = "push-forklift-virt-v2v",
    format = "Docker",
    image = ":forklift-virt-v2v",
    registry = "$${REGISTRY:-quay.io}",
    repository = "$${REGISTRY_ORG:-}$${REGISTRY_ORG:+/}forklift-virt-v2v",
    tag = "$${REGISTRY_TAG:-devel}",
)

# Appliance build
# NOTE: We deliberately do not use (and cannot use) rpmtree to build a base
# layer with packages. Supermin queries the RPM database to track package files
# and dependencies. Tar constructed by rpmtree is just a bunch of files and it
# does not preserve the RPM database info. Therefore we imitate a Dockerfile
# build here.
container_run_and_extract(
    name = "appliance",
    commands = [
        "set -x",
        "dnf -y update",
        # Latest glibc in CentOS Stream 9 causes QEMU in TCG emulation to fail
        # to boot and leads to kernel panic. If it is installed revert to older
        # version.
        "( [ \\\"\\$(rpm -q glibc)\\\" == \\\"glibc-2.34-66.el9.x86_64\\\" ] && dnf -y downgrade glibc-2.34-65.el9.x86_64 || true )",
        "dnf -y install libguestfs libguestfs-appliance libguestfs-xfs libguestfs-winsupport qemu-img supermin",
        "depmod \\$(ls /lib/modules/ |tail -n1)",
        "export LIBGUESTFS_BACKEND=direct",
        "export LIBGUESTFS_DEBUG=1 LIBGUESTFS_TRACE=1",
        "mkdir -p /usr/lib64/guestfs/appliance",
        "cd /usr/lib64/guestfs/appliance",
        "libguestfs-make-fixed-appliance .",
        "qemu-img convert -c -O qcow2 root root.qcow2",
        "mv -vf root.qcow2 root",
        "tar -cvf /libguestfs-appliance.tar /usr/lib64/guestfs/appliance",
    ],
    extract_file = "/libguestfs-appliance.tar",
    image = "@centos-stream-9//image",
)

container_image(
    name = "virt-v2v-image",
    base = "@ubi9-minimal//image",
    directory = "/",
    tars = [
        ":virt-v2v",
        "appliance/libguestfs-appliance.tar",
    ],
)

container_run_and_commit_layer(
    name = "no-ems-in-fips",
    commands = [
        "rm /etc/pki/tls/fips_local.cnf",
        "echo -e '[fips_sect]\ntls1-prf-ems-check = 0\nactivate = 1' > /etc/pki/tls/fips_local.cnf",
        "sed -i '/^\\[ crypto_policy \\]/a Options=RHNoEnforceEMSinFIPS' /etc/pki/tls/openssl.cnf",
    ],
    image = ":virt-v2v-image.tar",
)

container_run_and_commit_layer(
    name = "ca-certificate-from-secret",
    commands = [
        "mv /etc/pki/tls/certs/ca-bundle.crt /etc/pki/tls/certs/ca-bundle.crt.bak",
        "ln -sf /opt/ca-bundle.crt /etc/pki/tls/certs/ca-bundle.crt",
    ],
    image = ":virt-v2v-image.tar",
)

container_image(
    name = "virt-v2v-layer",
    base = ":virt-v2v-image",
    layers = [
        ":no-ems-in-fips",
        ":ca-certificate-from-secret",
    ],
    visibility = ["//visibility:public"],
)

container_image(
    name = "forklift-virt-v2v",
    base = ":virt-v2v-layer",
    directory = "/usr/local/bin/",
    empty_dirs = ["/disks"],
    entrypoint = ["/usr/local/bin/virt-v2v-wrapper"],
    env = {
        "LIBGUESTFS_BACKEND": "direct",
        "LIBGUESTFS_PATH": "/usr/lib64/guestfs/appliance",
    },
    files = [
        "//cmd:virt-v2v-wrapper",
        "@forklift//cmd/image-converter",
        "@forklift//cmd/virt-v2v-monitor",
    ],
    user = "1001",
    visibility = ["//visibility:public"],
)

rpmtree(
    name = "virt-v2v",
    rpms = [
        "@acl-0__2.3.1-4.el9.x86_64//rpm",
        "@adobe-source-code-pro-fonts-0__2.030.1.050-12.el9.1.x86_64//rpm",
        "@alternatives-0__1.24-2.el9.x86_64//rpm",
        "@audit-libs-0__3.1.5-1.el9.x86_64//rpm",
        "@augeas-libs-0__1.14.1-2.el9.x86_64//rpm",
        "@basesystem-0__11-13.el9.x86_64//rpm",
        "@bash-0__5.1.8-9.el9.x86_64//rpm",
        "@bzip2-0__1.0.8-8.el9.x86_64//rpm",
        "@bzip2-libs-0__1.0.8-8.el9.x86_64//rpm",
        "@ca-certificates-0__2024.2.69_v8.0.303-91.4.el9.x86_64//rpm",
        "@capstone-0__4.0.2-10.el9.x86_64//rpm",
        "@centos-gpg-keys-0__9.0-30.el9.x86_64//rpm",
        "@centos-stream-release-0__9.0-30.el9.x86_64//rpm",
        "@centos-stream-repos-0__9.0-30.el9.x86_64//rpm",
        "@cmake-rpm-macros-0__3.26.5-2.el9.x86_64//rpm",
        "@coreutils-single-0__8.32-39.el9.x86_64//rpm",
        "@cpio-0__2.13-16.el9.x86_64//rpm",
        "@cracklib-0__2.9.6-27.el9.x86_64//rpm",
        "@cracklib-dicts-0__2.9.6-27.el9.x86_64//rpm",
        "@crypto-policies-0__20240828-2.git626aa59.el9.x86_64//rpm",
        "@cryptsetup-libs-0__2.7.2-3.el9.x86_64//rpm",
        "@curl-minimal-0__7.76.1-31.el9.x86_64//rpm",
        "@cyrus-sasl-gssapi-0__2.1.27-21.el9.x86_64//rpm",
        "@cyrus-sasl-lib-0__2.1.27-21.el9.x86_64//rpm",
        "@daxctl-libs-0__78-2.el9.x86_64//rpm",
        "@dbus-1__1.12.20-8.el9.x86_64//rpm",
        "@dbus-broker-0__28-7.el9.x86_64//rpm",
        "@dbus-common-1__1.12.20-8.el9.x86_64//rpm",
        "@device-mapper-0__1.02.202-2.el9.x86_64//rpm",
        "@device-mapper-libs-0__1.02.202-2.el9.x86_64//rpm",
        "@diffutils-0__3.7-12.el9.x86_64//rpm",
        "@dmidecode-1__3.6-1.el9.x86_64//rpm",
        "@dracut-0__057-79.git20241127.el9.x86_64//rpm",
        "@dwz-0__0.14-3.el9.x86_64//rpm",
        "@edk2-ovmf-0__20241117-1.el9.x86_64//rpm",
        "@efi-srpm-macros-0__6-2.el9.x86_64//rpm",
        "@elfutils-libelf-0__0.192-2.el9.x86_64//rpm",
        "@expat-0__2.5.0-4.el9.x86_64//rpm",
        "@file-0__5.39-16.el9.x86_64//rpm",
        "@file-libs-0__5.39-16.el9.x86_64//rpm",
        "@filesystem-0__3.16-5.el9.x86_64//rpm",
        "@findutils-1__4.8.0-7.el9.x86_64//rpm",
        "@fonts-filesystem-1__2.0.5-7.el9.1.x86_64//rpm",
        "@fonts-srpm-macros-1__2.0.5-7.el9.1.x86_64//rpm",
        "@fuse-0__2.9.9-17.el9.x86_64//rpm",
        "@fuse-common-0__3.10.2-9.el9.x86_64//rpm",
        "@fuse-libs-0__2.9.9-17.el9.x86_64//rpm",
        "@gawk-0__5.1.0-6.el9.x86_64//rpm",
        "@gdbm-libs-1__1.23-1.el9.x86_64//rpm",
        "@gettext-0__0.21-8.el9.x86_64//rpm",
        "@gettext-libs-0__0.21-8.el9.x86_64//rpm",
        "@ghc-srpm-macros-0__1.5.0-6.el9.x86_64//rpm",
        "@glib-networking-0__2.68.3-3.el9.x86_64//rpm",
        "@glib2-0__2.68.4-16.el9.x86_64//rpm",
        "@glibc-0__2.34-144.el9.x86_64//rpm",
        "@glibc-common-0__2.34-214.el9.x86_64//rpm",
        "@glibc-langpack-en-0__2.34-144.el9.x86_64//rpm",
        "@gmp-1__6.2.0-13.el9.x86_64//rpm",
        "@gnupg2-0__2.3.3-4.el9.x86_64//rpm",
        "@gnutls-0__3.8.3-4.el9.x86_64//rpm",
        "@gnutls-dane-0__3.8.3-4.el9.x86_64//rpm",
        "@gnutls-utils-0__3.8.3-4.el9.x86_64//rpm",
        "@go-srpm-macros-0__3.6.0-7.el9.x86_64//rpm",
        "@grep-0__3.6-5.el9.x86_64//rpm",
        "@groff-base-0__1.22.4-10.el9.x86_64//rpm",
        "@gsettings-desktop-schemas-0__40.0-6.el9.x86_64//rpm",
        "@guestfs-tools-0__1.52.2-2.el9.x86_64//rpm",
        "@gzip-0__1.12-1.el9.x86_64//rpm",
        "@hexedit-0__1.6-1.el9.x86_64//rpm",
        "@hivex-libs-0__1.3.24-1.el9.x86_64//rpm",
        "@hwdata-0__0.348-9.16.el9.x86_64//rpm",
        "@inih-0__49-6.el9.x86_64//rpm",
        "@iproute-0__6.2.0-5.el9.x86_64//rpm",
        "@iproute-tc-0__6.2.0-5.el9.x86_64//rpm",
        "@iptables-libs-0__1.8.10-4.el9.x86_64//rpm",
        "@ipxe-roms-qemu-0__20200823-9.git4bd064de.el9.x86_64//rpm",
        "@json-c-0__0.14-11.el9.x86_64//rpm",
        "@json-glib-0__1.6.6-1.el9.x86_64//rpm",
        "@kbd-0__2.4.0-10.el9.x86_64//rpm",
        "@kbd-legacy-0__2.4.0-10.el9.x86_64//rpm",
        "@kbd-misc-0__2.4.0-10.el9.x86_64//rpm",
        "@kernel-core-0__5.14.0-539.el9.x86_64//rpm",
        "@kernel-modules-core-0__5.14.0-539.el9.x86_64//rpm",
        "@kernel-srpm-macros-0__1.0-13.el9.x86_64//rpm",
        "@keyutils-libs-0__1.6.3-1.el9.x86_64//rpm",
        "@kmod-0__28-10.el9.x86_64//rpm",
        "@kmod-libs-0__28-10.el9.x86_64//rpm",
        "@kpartx-0__0.8.7-34.el9.x86_64//rpm",
        "@krb5-libs-0__1.21.1-4.el9.x86_64//rpm",
        "@less-0__590-5.el9.x86_64//rpm",
        "@libacl-0__2.3.1-4.el9.x86_64//rpm",
        "@libaio-0__0.3.111-13.el9.x86_64//rpm",
        "@libarchive-0__3.5.3-4.el9.x86_64//rpm",
        "@libassuan-0__2.5.5-3.el9.x86_64//rpm",
        "@libattr-0__2.5.1-3.el9.x86_64//rpm",
        "@libblkid-0__2.37.4-20.el9.x86_64//rpm",
        "@libbpf-2__1.4.0-1.el9.x86_64//rpm",
        "@libbrotli-0__1.0.9-6.el9.x86_64//rpm",
        "@libcap-0__2.48-9.el9.x86_64//rpm",
        "@libcap-ng-0__0.8.2-7.el9.x86_64//rpm",
        "@libcbor-0__0.7.0-5.el9.x86_64//rpm",
        "@libcom_err-0__1.46.5-5.el9.x86_64//rpm",
        "@libconfig-0__1.7.2-9.el9.x86_64//rpm",
        "@libcurl-minimal-0__7.76.1-31.el9.x86_64//rpm",
        "@libdb-0__5.3.28-55.el9.x86_64//rpm",
        "@libeconf-0__0.4.1-4.el9.x86_64//rpm",
        "@libedit-0__3.1-38.20210216cvs.el9.x86_64//rpm",
        "@libev-0__4.33-6.el9.x86_64//rpm",
        "@libevent-0__2.1.12-8.el9.x86_64//rpm",
        "@libfdisk-0__2.37.4-20.el9.x86_64//rpm",
        "@libfdt-0__1.6.0-7.el9.x86_64//rpm",
        "@libffi-0__3.4.2-8.el9.x86_64//rpm",
        "@libfido2-0__1.13.0-2.el9.x86_64//rpm",
        "@libgcc-0__11.5.0-2.el9.x86_64//rpm",
        "@libgcrypt-0__1.10.0-11.el9.x86_64//rpm",
        "@libgomp-0__11.5.0-2.el9.x86_64//rpm",
        "@libgpg-error-0__1.42-5.el9.x86_64//rpm",
        "@libguestfs-0__1.54.0-7.el9.x86_64//rpm",
        "@libguestfs-winsupport-0__9.3-1.el9.x86_64//rpm",
        "@libguestfs-xfs-0__1.54.0-7.el9.x86_64//rpm",
        "@libibverbs-0__54.0-1.el9.x86_64//rpm",
        "@libidn2-0__2.3.0-7.el9.x86_64//rpm",
        "@libkcapi-0__1.4.0-2.el9.x86_64//rpm",
        "@libkcapi-hmaccalc-0__1.4.0-2.el9.x86_64//rpm",
        "@libksba-0__1.5.1-7.el9.x86_64//rpm",
        "@libmnl-0__1.0.4-16.el9.x86_64//rpm",
        "@libmount-0__2.37.4-20.el9.x86_64//rpm",
        "@libnbd-0__1.20.3-1.el9.x86_64//rpm",
        "@libnetfilter_conntrack-0__1.0.9-1.el9.x86_64//rpm",
        "@libnfnetlink-0__1.0.1-21.el9.x86_64//rpm",
        "@libnghttp2-0__1.43.0-6.el9.x86_64//rpm",
        "@libnl3-0__3.11.0-1.el9.x86_64//rpm",
        "@libosinfo-0__1.10.0-1.el9.x86_64//rpm",
        "@libpipeline-0__1.5.3-4.el9.x86_64//rpm",
        "@libpkgconf-0__1.7.3-10.el9.x86_64//rpm",
        "@libpmem-0__1.12.1-1.el9.x86_64//rpm",
        "@libpng-2__1.6.37-12.el9.x86_64//rpm",
        "@libproxy-0__0.4.15-35.el9.x86_64//rpm",
        "@libpsl-0__0.21.1-5.el9.x86_64//rpm",
        "@libpwquality-0__1.4.4-8.el9.x86_64//rpm",
        "@librdmacm-0__54.0-1.el9.x86_64//rpm",
        "@libseccomp-0__2.5.2-2.el9.x86_64//rpm",
        "@libselinux-0__3.6-1.el9.x86_64//rpm",
        "@libselinux-utils-0__3.6-1.el9.x86_64//rpm",
        "@libsemanage-0__3.6-3.el9.x86_64//rpm",
        "@libsepol-0__3.6-1.el9.x86_64//rpm",
        "@libsigsegv-0__2.13-4.el9.x86_64//rpm",
        "@libslirp-0__4.4.0-8.el9.x86_64//rpm",
        "@libsmartcols-0__2.37.4-20.el9.x86_64//rpm",
        "@libsoup-0__2.72.0-8.el9.x86_64//rpm",
        "@libssh-0__0.10.4-13.el9.x86_64//rpm",
        "@libssh-config-0__0.10.4-13.el9.x86_64//rpm",
        "@libstdc__plus____plus__-0__11.5.0-2.el9.x86_64//rpm",
        "@libtasn1-0__4.16.0-8.el9.x86_64//rpm",
        "@libtirpc-0__1.3.3-9.el9.x86_64//rpm",
        "@libtpms-0__0.9.1-4.20211126git1ff6fe1f43.el9.x86_64//rpm",
        "@libunistring-0__0.9.10-15.el9.x86_64//rpm",
        "@liburing-0__2.5-1.el9.x86_64//rpm",
        "@libusbx-0__1.0.26-1.el9.x86_64//rpm",
        "@libutempter-0__1.2.1-6.el9.x86_64//rpm",
        "@libuuid-0__2.37.4-20.el9.x86_64//rpm",
        "@libverto-0__0.3.2-3.el9.x86_64//rpm",
        "@libverto-libev-0__0.3.2-3.el9.x86_64//rpm",
        "@libvirt-client-0__10.10.0-9.el9.x86_64//rpm",
        "@libvirt-daemon-common-0__10.10.0-9.el9.x86_64//rpm",
        "@libvirt-daemon-driver-qemu-0__10.10.0-9.el9.x86_64//rpm",
        "@libvirt-daemon-driver-secret-0__10.10.0-9.el9.x86_64//rpm",
        "@libvirt-daemon-driver-storage-core-0__10.10.0-9.el9.x86_64//rpm",
        "@libvirt-daemon-log-0__10.10.0-9.el9.x86_64//rpm",
        "@libvirt-libs-0__10.10.0-9.el9.x86_64//rpm",
        "@libxcrypt-0__4.4.18-3.el9.x86_64//rpm",
        "@libxcrypt-compat-0__4.4.18-3.el9.x86_64//rpm",
        "@libxml2-0__2.9.13-6.el9.x86_64//rpm",
        "@libxslt-0__1.1.34-9.el9.x86_64//rpm",
        "@libzstd-0__1.5.5-1.el9.x86_64//rpm",
        "@lua-libs-0__5.4.4-4.el9.x86_64//rpm",
        "@lua-srpm-macros-0__1-6.el9.x86_64//rpm",
        "@lz4-libs-0__1.9.3-5.el9.x86_64//rpm",
        "@lzo-0__2.10-7.el9.x86_64//rpm",
        "@lzop-0__1.04-8.el9.x86_64//rpm",
        "@man-db-0__2.9.3-7.el9.x86_64//rpm",
        "@mingw-binutils-generic-0__2.41-3.el9.x86_64//rpm",
        "@mingw-filesystem-base-0__148-3.el9.x86_64//rpm",
        "@mingw32-crt-0__11.0.1-3.el9.x86_64//rpm",
        "@mingw32-filesystem-0__148-3.el9.x86_64//rpm",
        "@mingw32-srvany-0__1.1-3.el9.x86_64//rpm",
        "@mpfr-0__4.1.0-7.el9.x86_64//rpm",
        "@nbdkit-basic-filters-0__1.38.5-1.el9.x86_64//rpm",
        "@nbdkit-basic-plugins-0__1.38.5-1.el9.x86_64//rpm",
        "@nbdkit-curl-plugin-0__1.38.5-1.el9.x86_64//rpm",
        "@nbdkit-nbd-plugin-0__1.38.5-1.el9.x86_64//rpm",
        "@nbdkit-server-0__1.38.5-1.el9.x86_64//rpm",
        "@nbdkit-ssh-plugin-0__1.38.5-1.el9.x86_64//rpm",
        "@nbdkit-vddk-plugin-0__1.38.5-1.el9.x86_64//rpm",
        "@ncurses-0__6.2-10.20210508.el9.x86_64//rpm",
        "@ncurses-base-0__6.2-10.20210508.el9.x86_64//rpm",
        "@ncurses-libs-0__6.2-10.20210508.el9.x86_64//rpm",
        "@ndctl-libs-0__78-2.el9.x86_64//rpm",
        "@nettle-0__3.9.1-1.el9.x86_64//rpm",
        "@npth-0__1.6-8.el9.x86_64//rpm",
        "@numactl-libs-0__2.0.19-1.el9.x86_64//rpm",
        "@numad-0__0.5-37.20150602git.el9.x86_64//rpm",
        "@ocaml-srpm-macros-0__6-6.el9.x86_64//rpm",
        "@openblas-srpm-macros-0__2-11.el9.x86_64//rpm",
        "@openldap-0__2.6.6-3.el9.x86_64//rpm",
        "@openssh-0__8.7p1-44.el9.x86_64//rpm",
        "@openssh-clients-0__8.7p1-44.el9.x86_64//rpm",
        "@openssl-0__3.5.0-4.el9.x86_64//rpm",
        "@openssl-libs-1__3.5.0-4.el9.x86_64//rpm",
        "@osinfo-db-0__20240701-3.el9.x86_64//rpm",
        "@osinfo-db-tools-0__1.10.0-1.el9.x86_64//rpm",
        "@p11-kit-0__0.25.3-3.el9.x86_64//rpm",
        "@p11-kit-trust-0__0.25.3-3.el9.x86_64//rpm",
        "@pam-0__1.5.1-23.el9.x86_64//rpm",
        "@parted-0__3.5-2.el9.x86_64//rpm",
        "@pcre-0__8.44-4.el9.x86_64//rpm",
        "@pcre2-0__10.40-6.el9.x86_64//rpm",
        "@pcre2-syntax-0__10.40-6.el9.x86_64//rpm",
        "@perl-AutoLoader-0__5.74-481.el9.noarch//rpm",
        "@perl-B-0__1.80-481.el9.x86_64//rpm",
        "@perl-Carp-0__1.50-460.el9.noarch//rpm",
        "@perl-Class-Struct-0__0.66-481.el9.noarch//rpm",
        "@perl-Data-Dumper-0__2.174-462.el9.x86_64//rpm",
        "@perl-Digest-0__1.19-4.el9.noarch//rpm",
        "@perl-Digest-MD5-0__2.58-4.el9.x86_64//rpm",
        "@perl-Encode-0__3.08-462.el9.x86_64//rpm",
        "@perl-Errno-0__1.30-481.el9.x86_64//rpm",
        "@perl-Exporter-0__5.74-461.el9.noarch//rpm",
        "@perl-Fcntl-0__1.13-481.el9.x86_64//rpm",
        "@perl-File-Basename-0__2.85-481.el9.noarch//rpm",
        "@perl-File-Path-0__2.18-4.el9.noarch//rpm",
        "@perl-File-Temp-0__0.231.100-4.el9.noarch//rpm",
        "@perl-File-stat-0__1.09-481.el9.noarch//rpm",
        "@perl-FileHandle-0__2.03-481.el9.noarch//rpm",
        "@perl-Getopt-Long-0__2.52-4.el9.noarch//rpm",
        "@perl-Getopt-Std-0__1.12-481.el9.noarch//rpm",
        "@perl-HTTP-Tiny-0__0.076-462.el9.noarch//rpm",
        "@perl-IO-0__1.43-481.el9.x86_64//rpm",
        "@perl-IO-Socket-IP-0__0.41-5.el9.noarch//rpm",
        "@perl-IO-Socket-SSL-0__2.073-2.el9.noarch//rpm",
        "@perl-IPC-Open3-0__1.21-481.el9.noarch//rpm",
        "@perl-MIME-Base64-0__3.16-4.el9.x86_64//rpm",
        "@perl-Mozilla-CA-0__20200520-6.el9.noarch//rpm",
        "@perl-Net-SSLeay-0__1.94-1.el9.x86_64//rpm",
        "@perl-POSIX-0__1.94-481.el9.x86_64//rpm",
        "@perl-PathTools-0__3.78-461.el9.x86_64//rpm",
        "@perl-Pod-Escapes-0__1.07-460.el9.noarch//rpm",
        "@perl-Pod-Perldoc-0__3.28.01-461.el9.noarch//rpm",
        "@perl-Pod-Simple-0__3.42-4.el9.noarch//rpm",
        "@perl-Pod-Usage-0__2.01-4.el9.noarch//rpm",
        "@perl-Scalar-List-Utils-0__1.56-462.el9.x86_64//rpm",
        "@perl-SelectSaver-0__1.02-481.el9.noarch//rpm",
        "@perl-Socket-0__2.031-4.el9.x86_64//rpm",
        "@perl-Storable-0__3.21-460.el9.x86_64//rpm",
        "@perl-Symbol-0__1.08-481.el9.noarch//rpm",
        "@perl-Term-ANSIColor-0__5.01-461.el9.noarch//rpm",
        "@perl-Term-Cap-0__1.17-460.el9.noarch//rpm",
        "@perl-Text-ParseWords-0__3.30-460.el9.noarch//rpm",
        "@perl-Text-Tabs__plus__Wrap-0__2013.0523-460.el9.noarch//rpm",
        "@perl-Time-Local-0__1.300-7.el9.noarch//rpm",
        "@perl-URI-0__5.09-3.el9.noarch//rpm",
        "@perl-base-0__2.27-481.el9.noarch//rpm",
        "@perl-constant-0__1.33-461.el9.noarch//rpm",
        "@perl-if-0__0.60.800-481.el9.noarch//rpm",
        "@perl-interpreter-0__5.32.1-481.el9.x86_64//rpm",
        "@perl-libnet-0__3.13-4.el9.noarch//rpm",
        "@perl-libs-0__5.32.1-481.el9.x86_64//rpm",
        "@perl-mro-0__1.23-481.el9.x86_64//rpm",
        "@perl-overload-0__1.31-481.el9.noarch//rpm",
        "@perl-overloading-0__0.02-481.el9.noarch//rpm",
        "@perl-parent-0__0.238-460.el9.noarch//rpm",
        "@perl-podlators-0__4.14-460.el9.noarch//rpm",
        "@perl-srpm-macros-0__1-41.el9.x86_64//rpm",
        "@perl-subs-0__1.03-481.el9.noarch//rpm",
        "@perl-vars-0__1.05-481.el9.noarch//rpm",
        "@pigz-0__2.5-4.el9.x86_64//rpm",
        "@pixman-0__0.40.0-6.el9.x86_64//rpm",
        "@pkgconf-0__1.7.3-10.el9.x86_64//rpm",
        "@policycoreutils-0__3.6-2.1.el9.x86_64//rpm",
        "@polkit-0__0.117-13.el9.x86_64//rpm",
        "@polkit-libs-0__0.117-13.el9.x86_64//rpm",
        "@popt-0__1.18-8.el9.x86_64//rpm",
        "@procps-ng-0__3.3.17-14.el9.x86_64//rpm",
        "@protobuf-c-0__1.3.3-13.el9.x86_64//rpm",
        "@psmisc-0__23.4-3.el9.x86_64//rpm",
        "@publicsuffix-list-dafsa-0__20210518-3.el9.x86_64//rpm",
        "@pyproject-srpm-macros-0__1.16.2-1.el9.x86_64//rpm",
        "@qemu-img-17__9.1.0-6.el9.x86_64//rpm",
        "@qemu-kvm-common-17__9.1.0-6.el9.x86_64//rpm",
        "@qemu-kvm-core-17__9.1.0-6.el9.x86_64//rpm",
        "@qt5-srpm-macros-0__5.15.9-1.el9.x86_64//rpm",
        "@readline-0__8.1-4.el9.x86_64//rpm",
        "@redhat-rpm-config-0__208-1.el9.x86_64//rpm",
        "@rpm-0__4.16.1.3-36.el9.x86_64//rpm",
        "@rpm-libs-0__4.16.1.3-36.el9.x86_64//rpm",
        "@rpm-plugin-selinux-0__4.16.1.3-36.el9.x86_64//rpm",
        "@rust-srpm-macros-0__17-4.el9.x86_64//rpm",
        "@scrub-0__2.6.1-4.el9.x86_64//rpm",
        "@seabios-bin-0__1.16.3-4.el9.x86_64//rpm",
        "@seavgabios-bin-0__1.16.3-4.el9.x86_64//rpm",
        "@sed-0__4.8-9.el9.x86_64//rpm",
        "@selinux-policy-0__38.1.49-1.el9.noarch//rpm",
        "@selinux-policy-targeted-0__38.1.49-1.el9.noarch//rpm",
        "@setup-0__2.13.7-10.el9.x86_64//rpm",
        "@shadow-utils-2__4.9-12.el9.x86_64//rpm",
        "@snappy-0__1.1.8-8.el9.x86_64//rpm",
        "@sqlite-libs-0__3.34.1-7.el9.x86_64//rpm",
        "@swtpm-0__0.8.0-2.el9.x86_64//rpm",
        "@swtpm-libs-0__0.8.0-2.el9.x86_64//rpm",
        "@swtpm-tools-0__0.8.0-2.el9.x86_64//rpm",
        "@systemd-0__252-48.el9.x86_64//rpm",
        "@systemd-container-0__252-48.el9.x86_64//rpm",
        "@systemd-libs-0__252-50.el9.x86_64//rpm",
        "@systemd-pam-0__252-48.el9.x86_64//rpm",
        "@systemd-rpm-macros-0__252-50.el9.x86_64//rpm",
        "@systemd-udev-0__252-50.el9.x86_64//rpm",
        "@tar-2__1.34-7.el9.x86_64//rpm",
        "@tpm2-tss-0__3.2.3-1.el9.x86_64//rpm",
        "@tzdata-0__2024b-3.el9.x86_64//rpm",
        "@unbound-libs-0__1.16.2-8.el9.x86_64//rpm",
        "@unzip-0__6.0-57.el9.x86_64//rpm",
        "@userspace-rcu-0__0.12.1-6.el9.x86_64//rpm",
        "@util-linux-0__2.37.4-20.el9.x86_64//rpm",
        "@util-linux-core-0__2.37.4-20.el9.x86_64//rpm",
        "@vim-minimal-2__8.2.2637-21.el9.x86_64//rpm",
        "@virt-v2v-1__2.7.1-2.el9.x86_64//rpm",
        "@virtio-win-0.1.271-1.noarch//rpm",
        "@which-0__2.21-29.el9.x86_64//rpm",
        "@xfsprogs-0__6.4.0-4.el9.x86_64//rpm",
        "@xz-0__5.2.5-8.el9.x86_64//rpm",
        "@xz-libs-0__5.2.5-8.el9.x86_64//rpm",
        "@zip-0__3.0-35.el9.x86_64//rpm",
        "@zlib-0__1.2.11-40.el9.x86_64//rpm",
        "@zstd-0__1.5.5-1.el9.x86_64//rpm",
    ],
    visibility = ["//visibility:public"],
)
