load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "apis",
    srcs = ["apis.go"],
    importpath = "github.com/konveyor/forklift-controller/pkg/apis",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/forklift/v1beta1",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
    ],
)
