load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "controller",
    srcs = ["controller.go"],
    importpath = "github.com/konveyor/forklift-controller/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/controller/hook",
        "//pkg/controller/host",
        "//pkg/controller/map/network",
        "//pkg/controller/map/storage",
        "//pkg/controller/migration",
        "//pkg/controller/plan",
        "//pkg/controller/provider",
        "//pkg/settings",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager",
    ],
)
