load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "metrics",
    srcs = ["promethousutil.go"],
    importpath = "github.com/konveyor/forklift-controller/pkg/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/prometheus/client_golang/prometheus/promhttp",
        "//vendor/k8s.io/client-go/util/cert",
        "//vendor/k8s.io/klog/v2:klog",
    ],
)
