load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "settings",
    srcs = [
        "features.go",
        "inventory.go",
        "logging.go",
        "metrics.go",
        "migration.go",
        "policy.go",
        "profiler.go",
        "role.go",
        "settings.go",
    ],
    importpath = "github.com/konveyor/forklift-controller/pkg/settings",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/konveyor/controller/pkg/error",
        "//vendor/github.com/konveyor/controller/pkg/logging",
    ],
)
