load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "exec_util.go",
        "framework.go",
        "kubectl.go",
        "nfs-utils.go",
        "nodeplacement.go",
        "pod.go",
        "prometheus.go",
        "pv.go",
        "pvc.go",
        "vddk.go",
    ],
    importpath = "kubevirt.io/containerized-data-importer/tests/framework",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/common:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/feature-gates:go_default_library",
        "//pkg/image:go_default_library",
        "//pkg/util/naming:go_default_library",
        "//staging/src/kubevirt.io/containerized-data-importer-api/pkg/apis/core/v1beta1:go_default_library",
        "//tests/utils:go_default_library",
        "//vendor/github.com/coreos/prometheus-operator/pkg/apis/monitoring/v1:go_default_library",
        "//vendor/github.com/docker/go-units:go_default_library",
        "//vendor/github.com/google/uuid:go_default_library",
        "//vendor/github.com/kubernetes-csi/external-snapshotter/client/v4/apis/volumesnapshot/v1:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/api/authentication/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/api/storage/v1:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/client/clientset/clientset:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/client-go/dynamic:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/k8s.io/client-go/tools/remotecommand:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
        "//vendor/kubevirt.io/controller-lifecycle-operator-sdk/api:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client:go_default_library",
    ],
)

go_test(
    name = "suit_test",
    srcs = [
        "forklift_test.go",
        "openstack_extended_test.go",
        "openstack_test.go",
        "ova_test.go",
        "ovirt_test.go",
        "tests_suite_test.go",
        "vsphere_test.go",
    ],
    deps = [
        "//pkg/apis/forklift/v1beta1",
        "//pkg/apis/forklift/v1beta1/ref",
        "//pkg/lib/client/openstack",
        "//pkg/lib/logging",
        "//tests/suit/framework",
        "//tests/suit/utils",
        "//vendor/github.com/onsi/ginkgo",
        "//vendor/github.com/onsi/gomega",
        "//vendor/k8s.io/api/core/v1:core",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/apimachinery/pkg/types",
        "//vendor/kubevirt.io/api/core/v1:core",
    ],
)
