load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cmd_lib",
    srcs = ["entrypoint.go"],
    importpath = "github.com/kubev2v/forklift/virt-v2v/cmd",
    deps = [
        "//pkg/virt-v2v/config:go_default_library",
        "//pkg/virt-v2v/conversion:go_default_library",
        "//pkg/virt-v2v/server:go_default_library",
        "//pkg/virt-v2v/utils:go_default_library",
    ],
    visibility = ["//visibility:private"],
)

go_binary(
    name = "virt-v2v-wrapper",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
